# gleduzowne

./: .gitignore
gleduzowne/: README.md  distribute_options.yaml  pubspec.yaml
gleduzowne/android/app/: build.gradle
gleduzowne/ios/Runner.xcodeproj/: project.pbxproj
gleduzowne/lib/: main.dart
gleduzowne/lib/components/animator/: main.dart
gleduzowne/lib/extensions/: int_ext.dart
gleduzowne/lib/src/: platform_menu.dart
gleduzowne/lib/widgets/: code_view_dialog.dart  nav_drawer.dart
gleduzowne/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
gleduzowne/macos/Flutter/: GeneratedPluginRegistrant.swift
gleduzowne/macos/Runner/: DebugProfile.entitlements
gleduzowne/macos/Runner.xcodeproj/: project.pbxproj
gleduzowne/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
gleduzownebackend/: package-lock.json  package.json
gleduzownebackend/gleduzownebackend_client/.dart_tool/: package_config.json
gleduzownebackend/gleduzownebackend_flutter/: .flutter-plugins  .flutter-plugins-dependencies
gleduzownebackend/gleduzownebackend_flutter/.dart_tool/: package_config.json  package_config_subset
gleduzownebackend/gleduzownebackend_flutter/android/: local.properties
gleduzownebackend/gleduzownebackend_server/: Dockerfile  pubspec.yaml
gleduzownebackend/gleduzownebackend_server/.dart_tool/: package_config.json
gleduzownebackend/gleduzownebackend_server/config/: passwords.yaml  production.yaml
gleduzownecli/: Cargo.toml
gleduzownecli/src/: main.rs
src/app/: page.tsx
(+28 files in other folders)
